[package]
name = "more-jpeg"
version = "0.1.0"
edition = "2021"
authors = ['Skander Jeddi <skander.jeddi2@gmail.com>']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
liquid = "0.26.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
thiserror = "1.0.30"
base64 = "0.13.0"
serde = "1.0.136"
serde_json = "1.0.79"
image = "0.24.1"
ulid = "0.5.0"
rand = "0.8.5"
async-std = { version = "1.11.0", features = ["attributes"] }

[profile.dev.package."*"]
opt-level = 2
